--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		
 		function f2()
 		{
-			$ids = document.getElementById('setid').value;
 			var xhttp = new XMLHttpRequest();
 			xhttp.open("POST", "new.php", true);
 			xhttp.setRequestHeader('content-type', 'application/x-www-form-urlencoded')
-			xhttp.send("$ids");
+			$a = document.getElementById('setid').value;
+			xhttp.send("id="+$a);
 			xhttp.onreadystatechange = function()
 			{
 				if (this.readyState == 4 && this.status == 200) {
@@ -28,7 +28,7 @@
 
 	<div id="data">Click to Change!!!</div>
 	<input type="text" name="" id="setid">
-	<input type="button" name="" value="Click!" onclick="f2()" />
+	<input type="button" name="rs" value="Click!" onclick="f2()" />
 
 	
 </body>
